# velocity-dl

./: .gitignore  BROWSER_INTEGRATION_SETUP.md  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  run_dev.bat
chromium-extension/: background.js  manifest.json  options.html  options.js  popup.html  popup.js  scan-overlay.js
docs/: alpha-release-checklist.md  diagnostics-privacy.md  regression-harness.md  release-notes-template.md
native-messaging/: com.velocitydl.native_host.chrome.template.json  com.velocitydl.native_host.edge.template.json  install-native-host.ps1
scripts/: append_test_result.ps1  browser-handoff-regression.mjs  build.mjs  bundle-windows-full.cmd  bundle-windows-slim.cmd  bundle-windows.cmd  log_skipped_targets.ps1  stage-vendor-binaries.ps1  strategy-targets.example.csv  strategy-targets.regression.csv  summarize_strategy_telemetry.ps1
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.full.conf.json  tauri.slim.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: dpapi_win.rs  mod.rs  store.rs
src-tauri/src/engine/: debug.rs  downloader.rs  manager.rs  merger.rs  mod.rs  rate_limiter.rs  resume.rs  segmenter.rs  settings.rs  sound.rs  speed.rs
src-tauri/src/extractor/: binaries.rs  clipboard.rs  mod.rs  native_bridge.rs  static_parse.rs  webview.rs  ytdlp.rs
src-tauri/src/ipc/: commands.rs
src-tauri/src/protocols/: dash.rs  hls.rs  mod.rs  strategy.rs
src/lib/: diagnostics.ts
(+9 files in other folders)
